config/envoy.yaml
static_resources:
  listeners:
    # - name: listener_tcp
    #   address:
    #     socket_address:
    #       address: 0.0.0.0
    #       port_value: 9000
    #   filter_chains:
    #     - filters:
    #         - name: envoy.filters.network.golang
    #           typed_config:
    #             "@type": type.googleapis.com/envoy.extensions.filters.network.golang.v3alpha.Config
    #             is_terminal_filter: true
    #             library_id: autopause_tcp
    #             library_path: "/lib/autopause_tcp.so"
    #             plugin_name: autopause_tcp
    #             plugin_config:
    #               "@type": type.googleapis.com/xds.type.v3.TypedStruct
    #               value:
    #                 clickhouse_server_addr: ""
    #                 clickhouse_server_port: 9000
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8123
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                http_filters:
                  - name: envoy.filters.http.golang
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
                      library_id: autopause_http
                      library_path: "lib/autopause_http.so"
                      plugin_name: alicloud-clickhouse-autopause-proxy-http
                      plugin_config:
                        "@type": type.googleapis.com/xds.type.v3.TypedStruct
                        value:
                          autopause_service: ""
                          region_id: "cn-beijing"
                          instance_id: ""
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: clickhouse
                  virtual_hosts:
                    - name: clickhouse
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: clickhouse
  clusters:
    - name: plainText
      type: ORIGINAL_DST
      lb_policy: CLUSTER_PROVIDED
    - name: clickhouse
      type: LOGICAL_DNS
      load_assignment:
        cluster_name: clickhouse
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ""
                      port_value: 8123
